# qsharp-alice-bob-resource-estimator

./: .gitignore  Cargo.toml  Readme.md  cables.py  energy_estimate.ipynb  example.ipynb  gates.py  getting_started.ipynb  hardware.py  helpers.py  how_to_use.ipynb  logical_utils.py  materials.py  pixi.toml  pyproject.toml  qualtran_test.ipynb  rescat.py
.github/workflows/: ci.yml
anb_estimator/: __init__.py  bloq_to_logical_counts.py  dataclass_wrappers.py  function_wrappers.py  qualtran_interface.py  qualtran_wrapper.py
doc/: getting_started.ipynb
examples/: construction_helpers.py  elliptic_log.rs  from_qsharp.rs  getting_started.ipynb  main.rs
qsharp_alice_bob_resource_estimator/: __init__.py  dataclass_wrappers.py  function_wrappers.py  qualtran_interface.py
qualtran_helpers/: bloq_to_logical_counts.py  qualtran_wrapper.py
qualtran_primitives/: construction_helpers.py
src/: cables.rs  code.rs  counter.rs  ecc_example.rs  estimates.rs  examples.rs  factories.rs  gates.rs  hardware.rs  ldpc_code.rs  ldpc_estimates.rs  ldpc_overhead.rs  lib.rs  logical_utils.rs  main.rs  materials.rs  python.rs  qubit.rs
