[project]
name = "qsharp_alice_bob_resource_estimator"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]
module-name = "qsharp_alice_bob_resource_estimator._native"

[tool.mypy]
strict = true
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = true
